Harden compiler paths and lifecycle cleanup